match detailed info

--- a/kyrciapgg/kyrciapp/templates/contact.html
+++ b/kyrciapgg/kyrciapp/templates/contact.html
@@ -25,9 +25,9 @@
         }
 
         .color-dark:focus {
-            color: white; /* Zmienia kolor tekstu na biały */
-            background-color: #333; /* Ciemniejsze tło podczas pisania */
-            border-color: #555; /* Ciemniejsza obramówka */
+            color: white; 
+            background-color: #333; 
+            border-color: #555; 
         }   
 
         .margin-left2 {
@@ -58,22 +58,22 @@
             display: none;
             width: 24%;
             height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); /* Czarne tło z przezroczystością */
+            background-color: rgba(40, 38, 43, 0.9); 
             color: white;
             position: fixed;
             top: 0px;
-            left: 0; /* Menu wyświetlane z lewej strony */
+            left: 0;
             z-index: 1000;
-            padding: 20px; /* Dodatkowe wcięcie dla treści menu */
+            padding: 20px; 
             border-radius: .40rem;
             border-color: rgba(0, 0, 0, 0.9);
             display: flex;
-            justify-content: center; /* Centruje przycisk w poziomie */
+            justify-content: center;
         
         }
         .champion-container {
             position: relative;
-            display: inline-block; /* Pozwala na wyświetlanie obok siebie */
+            display: inline-block; 
             margin: 10px;
         }
 
@@ -81,11 +81,11 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.5); /* Półprzezroczyste tło dla lepszego kontrastu */
-            color: white; /* Biały tekst */
-            padding: 2px 5px; /* Mały odstęp wewnątrz */
-            font-size: 12px; /* Mniejsza czcionka dla nazwy */
-            border-radius: 3px; /* Lekko zaokrąglone rogi */
+            background-color: rgba(0, 0, 0, 0.5); 
+            color: white;
+            padding: 2px 5px; 
+            font-size: 12px; 
+            border-radius: 3px; 
         }
         .custom-card {
             background: rgb(40, 38, 43);
@@ -94,8 +94,8 @@
             color: rgb(255, 255, 255);
             margin-bottom: 15px;
             margin-top: 15px;
-            width: 54%; /* Ogranicza szerokość karty do 75% szerokości kontenera */
-            margin-left: auto; /* Centruje kartę w poziomie */
+            width: 54%; 
+            margin-left: auto; 
             margin-right: auto;
             padding-top: 25px;
             padding-left: 25px;
@@ -105,12 +105,12 @@
         .champion-list-title {
             margin-top: 25px;
             font-weight: bold;
-            font-size: 2.5rem; /* Ekwialent rozmiaru 4 w Bootstrap */
+            font-size: 2.5rem; 
         }
 
         .find-champion-text {
-            font-size: 1.5rem; /* Przybliżony ekwialent rozmiaru 12px */
-            margin-top: 1rem; /* Dodaje przestrzeń między linijkami */
+            font-size: 1.5rem; 
+            margin-top: 1rem; 
             align-content: center;
             padding-left: 70px;
         }
