--- a/kyrciapgg/kyrciapp/templates/profile.html
+++ b/kyrciapgg/kyrciapp/templates/profile.html
@@ -13,8 +13,8 @@
 
 <style>
         .small-tier-icon {
-        width: 5%;  /* Zmniejszenie szerokości obrazu do 50% szerokości rodzica */
-        height: auto; /* Zachowanie proporcji obrazu */
+        width: 5%;  
+        height: auto; 
     }
 .custom-alert {
 
@@ -33,30 +33,30 @@
 
 .custom-card {
         background: rgb(40, 38, 43);
-        border-radius: 10px; /* Zaokrąglenie rogów ramki */
+        border-radius: 10px; 
         border-color: rgba(0, 0, 0, 0.1);
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Cień ramki dla lepszego efektu */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
         color:rgb(255, 255, 255);
         margin-bottom: 15px;
     }
 
     .rank-info {
-        margin-left: 100px; /* Ustawienie marginesu lewego na 100px */
-        display: flex; /* Użycie flexboxa do wyrównania treści */
-        flex-direction: column; /* Ustawienie kierunku elementów dzieci na pionowy */
-        align-items: flex-start; /* Wyrównanie dzieci do lewej strony */
+        margin-left: 100px; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: flex-start; 
     }
 
     .summoner-name {
-        margin-right: auto; /* Spowoduje to "odpychanie" informacji o randze na prawo */
-        white-space: nowrap; /* Zapobiegnie łamaniu się nazwy użytkownika */
-        overflow: hidden; /* Ukrycie zawartości wychodzącej poza pole */
-        text-overflow: ellipsis; /* Dodanie "..." jeśli nazwa jest za długa */
+        margin-right: auto;
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis; 
     }
     .rank-row {
         display: flex;
         align-items: center;
-        gap: 5px; /* Odstęp pomiędzy ikoną a tekstem */
+        gap: 5px; 
     }
 
     .no-wrap {
@@ -66,17 +66,17 @@
             display: none;
             width: 24%;
             height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); /* Czarne tło z przezroczystością */
+            background-color: rgba(40, 38, 43, 0.9); 
             color: white;
             position: fixed;
             top: 0px;
-            left: 0; /* Menu wyświetlane z lewej strony */
+            left: 0; 
             z-index: 1000;
-            padding: 20px; /* Dodatkowe wcięcie dla treści menu */
+            padding: 20px; 
             border-radius: .40rem;
             border-color: rgba(0, 0, 0, 0.9);
             display: flex;
-            justify-content: center; /* Centruje przycisk w poziomie */
+            justify-content: center; 
         }
         .move-button {
             display: flex;
