--- a/kyrciapgg/kyrciapp/templates/champions.html
+++ b/kyrciapgg/kyrciapp/templates/champions.html
@@ -39,22 +39,22 @@
             display: none;
             width: 24%;
             height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); /* Czarne tło z przezroczystością */
+            background-color: rgba(40, 38, 43, 0.9); 
             color: white;
             position: fixed;
             top: 0px;
-            left: 0; /* Menu wyświetlane z lewej strony */
+            left: 0; 
             z-index: 1000;
-            padding: 20px; /* Dodatkowe wcięcie dla treści menu */
+            padding: 20px; 
             border-radius: .40rem;
             border-color: rgba(0, 0, 0, 0.9);
             display: flex;
-            justify-content: center; /* Centruje przycisk w poziomie */
+            justify-content: center; 
         
         }
         .champion-container {
             position: relative;
-            display: inline-block; /* Pozwala na wyświetlanie obok siebie */
+            display: inline-block; 
             margin: 10px;
         }
 
@@ -62,11 +62,11 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.5); /* Półprzezroczyste tło dla lepszego kontrastu */
-            color: white; /* Biały tekst */
-            padding: 2px 5px; /* Mały odstęp wewnątrz */
-            font-size: 12px; /* Mniejsza czcionka dla nazwy */
-            border-radius: 3px; /* Lekko zaokrąglone rogi */
+            background-color: rgba(0, 0, 0, 0.5); 
+            color: white; 
+            padding: 2px 5px; 
+            font-size: 12px;
+            border-radius: 3px; 
         }
         .custom-card {
             background: rgb(40, 38, 43);
@@ -75,19 +75,19 @@
             color: rgb(255, 255, 255);
             margin-bottom: 15px;
             margin-top: 15px;
-            width: 69%; /* Ogranicza szerokość karty do 75% szerokości kontenera */
-            margin-left: auto; /* Centruje kartę w poziomie */
+            width: 69%; 
+            margin-left: auto; 
             margin-right: auto;
         }
         .champion-list-title {
             margin-top: 25px;
             font-weight: bold;
-            font-size: 2.5rem; /* Ekwialent rozmiaru 4 w Bootstrap */
+            font-size: 2.5rem; 
         }
 
         .find-champion-text {
-            font-size: 1.5rem; /* Przybliżony ekwialent rozmiaru 12px */
-            margin-top: 1rem; /* Dodaje przestrzeń między linijkami */
+            font-size: 1.5rem; 
+            margin-top: 1rem; 
             align-content: center;
             padding-left: 70px;
         }
@@ -95,8 +95,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            /* margin-left: 100px; */
-        
+  
         }
     </style>
 
@@ -115,10 +114,7 @@
             <button class="btn btn-primary" type="button" id="menuToggle" style="margin-right: 100px;">
                 <i class="bi bi-list"></i>
             </button>
-            <!--             
-            {% if user.is_authenticated %}
-                <button class="btn btn-info color-white" type="button" disabled>Welcome, {{ user.username }}!</button>
-            {% endif %} -->
+
         </div>
 
 
