--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -49,17 +49,17 @@
             display: none;
             width: 24%;
             height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); /* Czarne tło z przezroczystością */
+            background-color: rgba(40, 38, 43, 0.9); 
             color: white;
             position: fixed;
             top: 0px;
-            left: 0; /* Menu wyświetlane z lewej strony */
+            left: 0; 
             z-index: 1000;
-            padding: 20px; /* Dodatkowe wcięcie dla treści menu */
+            padding: 20px; 
             border-radius: .40rem;
             border-color: rgba(0, 0, 0, 0.9);
             display: flex;
-            justify-content: center; /* Centruje przycisk w poziomie */
+            justify-content: center; 
         }   
 
         .move-button {
@@ -69,14 +69,7 @@
             /* margin-left: 100px; */
         
         }
-        /* body {
-            
-            background-image: url('{% static "images/talon1.png" %}');
-            background-size: cover; 
-            background-position: center; 
-            background-repeat: no-repeat; 
-            
-        } */
+
     </style>
 
 
