--- a/kyrciapgg/kyrciapp/templates/contact.html
+++ b/kyrciapgg/kyrciapp/templates/contact.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Wpisz nazwę gracza</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+
 
     <style>
         .login-button-container {
@@ -118,13 +121,35 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            /* margin-left: 100px; */
         
         }
+        body.light-theme {
+    background-color: #f0f0f0;
+    color: #333; 
+    }
+
+    body.light-theme .custom-card {
+    background: #dbdbdb;
+    color: #000000;
+    }
+    
+
+
+    .theme-toggle-btn {
+    border: 2px solid #ffffff66;
+    border-radius: 5px;
+    background-color: rgba(66, 63, 71, 0.9);
+    cursor: pointer;
+    margin-top: 15px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
+    .theme-toggle-btn i {
+    font-size: 24px;
+}
     </style>
-
-
-
 </head>
 <body class="bg-dark text-white">
 
@@ -132,24 +157,15 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-1"> </div>
-        <!-- Lewa strona -->
         <div class="col text-center padding-left ">
-            
             <button class="btn btn-primary" type="button" id="menuToggle" style="margin-right: 100px;">
                 <i class="bi bi-list"></i>
             </button>
-            <!--             
-            {% if user.is_authenticated %}
-                <button class="btn btn-info color-white" type="button" disabled>Welcome, {{ user.username }}!</button>
-            {% endif %} -->
         </div>
 
-
-        <!-- Prawa strona -->
         <div class="col text-center ">
             {% if user.is_authenticated %}
                 <a href="{% url 'logout_confirm' %}" class="btn btn-secondary">Log out</a>
-                <!-- Przycisk z ikoną osoby dla zalogowanych użytkowników -->
                 <a href="{% url 'index' %}" class="btn btn-secondary ">
                     <i class="fas fa-home"></i>
                 </a>
@@ -183,6 +199,9 @@
         <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
             <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
         </a>
+        <button id="theme-toggle" class="theme-toggle-btn ">
+            <i class="bi bi-brightness-alt-high"></i>
+        </button>
     </div>
 </div>
 
@@ -223,18 +242,9 @@
         </div>  
     </div>
 
-    <script>
-        document.getElementById('menuToggle').addEventListener('click', function() {
-            var menu = document.getElementById('navMenu');
-            if (menu.style.display === 'none') {
-                menu.style.display = 'block';
-            } else {
-                menu.style.display = 'none';
-            }
-        });
-    </script>
-
-
+    <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
+    
+</script>
 </body>
 </html>
 
