--- a/kyrciapgg/kyrciapp/templates/detailed_match_info.html
+++ b/kyrciapgg/kyrciapp/templates/detailed_match_info.html
@@ -8,207 +8,234 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Informacje o Graczu</title>
+    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+    <style>
+        .btn-custom {
+           height: 42px; 
+           white-space: nowrap; 
+           margin-left: 8px;
+       }
+   
+       .small-profile-icon {
+           width: 25%;  
+           height: auto; 
+       }
+   
+       .small-tier-icon {
+           width: 65%;  
+           height: auto; 
+       }
+   
+       .tiny-champ-icon {
+           width: 10%;  
+           height: auto; 
+       }
+   
+       .custom-card {
+           background: rgb(40, 38, 43);
+           border-radius: 10px; 
+           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+           color:rgb(255, 255, 255);
+           margin-bottom: 15px;
+           padding-left: 15px;
+           padding-top: 15px;
+           padding-right: 15px;
+       }
+   
+       .separator-border {
+           border-bottom: 20px solid rgb(33, 36, 40); 
+           padding-top: 10px;
+           padding-bottom: 10px;
+   
+       }
+   
+       .left-padding {
+   
+           font: bold;
+           font-size: 20px;
+       }
+   
+       .game-container {
+       display: flex;
+       align-items: center;
+       gap: 10px;
+   }
+   
+   .game-result p {
+       margin: 0;
+       font-size: 16px;
+       font-weight: bold;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+   
+       padding-bottom: 30px;
+       padding-right: 35px;
+       padding-top: 30px;
+       
+   }
+   
+   .game-result p:nth-child(2) {
+       color: green;
+   }
+   
+   
+   .champion-icon {
+       width: 70px !important;
+       height: 70px;
+   }
+   
+   .champion-level {
+       position: absolute;
+       bottom: 0;
+       right: 0;
+       background: rgba(0, 0, 0, 0.5);
+       color: white;
+       padding: 2px;
+   }
+   
+   .summoner-spells img {
+       width: 35px;
+       height: 35px;
+       display: block; 
+       align-items: center;
+   }
+   
+   .win-background {
+       background-color: rgba(0, 128, 0, 0.15);
+       border-radius: 10px; 
+   }
+   
+   .loss-background {
+       background-color: rgba(255, 0, 0, 0.15); 
+       border-radius: 10px; 
+   }
+   
+   .queue-name {
+       font-weight: bold; 
+       font-size: larger; 
+       text-align: center; 
+   }
+   
+   .center-text {
+       text-align: center; 
+   }
+   
+   .date-time-info {
+       margin-top: 20px; 
+   }
+   
+   .items-container {
+       display: flex;
+       flex-wrap: wrap;
+   }
+   
+   .item-row {
+       display: flex;
+       margin-bottom: 5px; 
+   }
+   
+   .item-row:last-child {
+       flex-grow: 1;
+   }
+   
+   .item-icon {
+       width: 35px;
+       height: 35px; 
+       margin-right: 5px; 
+   }
+   
+   .last-item {
+       flex-grow: 1;
+       text-align: right;
+   }
+   
+   .champion-container {
+       position: relative;
+       display: inline-block; 
+   
+   }
+   
+   .champ-level {
+       position: absolute;
+       bottom: 0;
+       left: 1;
+       background-color: rgba(0, 0, 0, 0.75); 
+       color: white; 
+   
+   }
+   
+   
+       #navMenu {
+           display: none;
+           width: 16%;
+           height: 100vh;
+           background-color: rgba(40, 38, 43, 0.9); 
+           color: white;
+           position: fixed;
+           top: 0px;
+           left: 0; 
+           z-index: 1000;
+           padding: 20px; 
+           border-radius: .40rem;
+           border-color: rgba(0, 0, 0, 0.9);
+           display: flex;
+           justify-content: center; 
+           }   
+   
+       .move-button {
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           
+           }
+   
+       .margin-style{
+           margin-top: 20px;
+       }
+       
+       .no-wrap {
+           white-space: nowrap; 
+       }
+   
+   .win-background {
+       background-color: rgba(0, 128, 0, 0.15);
+       border-radius: 10px; 
+   }
+   
+   .loss-background {
+       background-color: rgba(255, 0, 0, 0.15); 
+       border-radius: 10px;
+   }
+   body.light-theme {
+    background-color: #f0f0f0;
+    color: #333; 
+    }
+
+    body.light-theme .custom-card {
+    background: #ffffff; 
+    color: #000000; 
+    }
+    
+
+
+    .theme-toggle-btn {
+    border: 2px solid #ffffff66;
+    border-radius: 5px;
+    background-color: rgba(66, 63, 71, 0.9);
+    cursor: pointer;
+    margin-top: 15px;
+    display: inline-flex; 
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
+    .theme-toggle-btn i {
+    font-size: 24px; 
+}
+   </style>
 </head>
 
-<style>
-     .btn-custom {
-        height: 42px; 
-        white-space: nowrap; 
-        margin-left: 8px;
-    }
-
-    .small-profile-icon {
-        width: 25%;  
-        height: auto; 
-    }
-
-    .small-tier-icon {
-        width: 65%;  
-        height: auto; 
-    }
-
-    .tiny-champ-icon {
-        width: 10%;  
-        height: auto; 
-    }
-
-    .custom-card {
-        background: rgb(40, 38, 43);
-        border-radius: 10px; 
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        color:rgb(255, 255, 255);
-        margin-bottom: 15px;
-        padding-left: 15px;
-        padding-top: 15px;
-        padding-right: 15px;
-    }
-
-    .separator-border {
-        border-bottom: 20px solid rgb(33, 36, 40); 
-        padding-top: 10px;
-        padding-bottom: 10px;
-
-    }
-
-    .left-padding {
-
-        font: bold;
-        font-size: 20px;
-    }
-
-    .game-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.game-result p {
-    margin: 0;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-bottom: 30px;
-    padding-right: 35px;
-    padding-top: 30px;
-    
-}
-
-.game-result p:nth-child(2) {
-    color: green;
-}
-
-
-.champion-icon {
-    width: 70px !important;
-    height: 70px;
-}
-
-.champion-level {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 2px;
-}
-
-.summoner-spells img {
-    width: 35px;
-    height: 35px;
-    display: block; 
-    align-items: center;
-}
-
-.win-background {
-    background-color: rgba(0, 128, 0, 0.15);
-    border-radius: 10px; 
-}
-
-.loss-background {
-    background-color: rgba(255, 0, 0, 0.15); 
-    border-radius: 10px; 
-}
-
-.queue-name {
-    font-weight: bold; 
-    font-size: larger; 
-    text-align: center; 
-}
-
-.center-text {
-    text-align: center; 
-}
-
-.date-time-info {
-    margin-top: 20px; 
-}
-
-.items-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.item-row {
-    display: flex;
-    margin-bottom: 5px; 
-}
-
-.item-row:last-child {
-    flex-grow: 1;
-}
-
-.item-icon {
-    width: 35px;
-    height: 35px; 
-    margin-right: 5px; 
-}
-
-.last-item {
-    flex-grow: 1;
-    text-align: right;
-}
-
-.champion-container {
-    position: relative;
-    display: inline-block; 
-
-}
-
-.champ-level {
-    position: absolute;
-    bottom: 0;
-    left: 1;
-    background-color: rgba(0, 0, 0, 0.75); 
-    color: white; 
-
-}
-
-
-    #navMenu {
-        display: none;
-        width: 16%;
-        height: 100vh;
-        background-color: rgba(40, 38, 43, 0.9); 
-        color: white;
-        position: fixed;
-        top: 0px;
-        left: 0; 
-        z-index: 1000;
-        padding: 20px; 
-        border-radius: .40rem;
-        border-color: rgba(0, 0, 0, 0.9);
-        display: flex;
-        justify-content: center; 
-        }   
-
-    .move-button {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        
-        }
-
-    .margin-style{
-        margin-top: 20px;
-    }
-    
-    .no-wrap {
-        white-space: nowrap; 
-    }
-
-.win-background {
-    background-color: rgba(0, 128, 0, 0.15);
-    border-radius: 10px; 
-}
-
-.loss-background {
-    background-color: rgba(255, 0, 0, 0.15); 
-    border-radius: 10px;
-}
-</style>
 
 <body class="bg-dark text-white d-flex justify-content-center align-items-top" style="min-height: 100vh;">
 
@@ -269,6 +296,9 @@
                 <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
                     <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
                 </a>
+                <button id="theme-toggle" class="theme-toggle-btn ">
+                    <i class="bi bi-brightness-alt-high"></i>
+                </button>
             </div>
         </div>
 
@@ -283,7 +313,6 @@
         <div class="container custom-card">
             <div class="row align-items-center">
                 <div class="col">Summoner</div>
-                <!-- <div class="col">Champion & Level</div> -->
                 <div class="col">Summoner Spells</div>
                 <div class="col">KDA</div>
                 <div class="col">CS & CS/min</div>
@@ -320,27 +349,20 @@
                     <div class="col">{{ player.total_minions_killed }} CS</div>
                     <div class="col">{{ player.minions_killed_min }} /m</div>
                 </div>
-
                 <div class="col">{{ player.vision_score }} Vision</div>
-
-                <!-- <div class="col">{{ player.lane }}</div> -->
-                
-                
                 <div class="col">{{ player.total_damage_dealt }}</div>
                 <div class="col">{{ player.gold_earned }}</div>
                 <div class="col " style="font-weight: bold;">
                     {% if player.largest_multi_kill == 5 %}
                         PENTA Kill!
                     {% elif player.largest_multi_kill == 4 %}
-                        Quadrakill!
+                        Quadra Kill!
                     {% elif player.largest_multi_kill == 3 %}
                         Triple Kill!
                     {% else %}
                         
                     {% endif %}
-                </div>
-                <!-- <div class="col">{{ player.penta_kills }}</div> -->
-                
+                </div>           
                 <div class="col">
                     {% if player.first_Blood_Kill == True %}
                         First Blood!
@@ -348,14 +370,11 @@
                         
                     {% endif %}
                 </div>
-                <!-- Dodawanie ikon przedmiotów -->
                 <div class="col">
                     {% for item in player.items_in_match %}
                         <img src="https://cdn.darkintaqt.com/lol/c-assets/items/{{ item }}.png.webp" alt="Item" class="img-fluid" style="width: 30px;">
                     {% endfor %}
                 </div>
-                <!-- Dodawanie informacji o runach jeśli są dostępne -->
-                <!-- <div class="col">{{ player.runes }}</div> -->
             </div>
             <hr> 
             {% endfor %}
@@ -364,22 +383,7 @@
         
         
         </div>
-        <script>
-            document.getElementById('menuToggle').addEventListener('click', function() {
-                var menu = document.getElementById('navMenu');
-                if (menu.style.display === 'none') {
-                    menu.style.display = 'block';
-                } else {
-                    menu.style.display = 'none';
-                }
-            });
-            document.getElementById('closeMenuButton').addEventListener('click', function() {
-                var menu = document.getElementById('navMenu');
-                menu.style.display = 'none';
-            });
-        
-        </script>
-        
+        <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
         
         </body>
         </html>
