--- a/kyrciapgg/kyrciapp/templates/index.html
+++ b/kyrciapgg/kyrciapp/templates/index.html
@@ -8,86 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'kyrciapp/css/styles.css' %}">
 
     <title>Wpisz nazwę gracza</title>
-
     <style>
-        .login-button-container {
-            position: absolute;
-            right: 480px;
-            top: 10px;
-        }
 
-        .color-white {
-
-        color: rgb(0, 0, 0) !important;
-
-        }
-
-        .padding-left {
-            padding-left: 30px;
-        }
-
-        .margin-left2 {
-            margin-left: 15px;
-        }
-
-        .custom-alert {
-
-            display: inline-block; 
-
-            color: #000000;
-            background-color: rgb(248, 215, 218);
-            border-color: #dc3545;
-            padding: .75rem 1.25rem;
-            border-radius: .25rem;
-            margin-top: 50px;
-            }
-
-
-        #navMenu {
-            display: none;
-            width: 24%;
-            height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); 
-            color: white;
-            position: fixed;
-            top: 0px;
-            left: 0; 
-            z-index: 1000;
-            padding: 20px; 
-            border-radius: .40rem;
-            border-color: rgba(0, 0, 0, 0.9);
-            display: flex;
-            justify-content: center; 
-        }   
-
-        .move-button {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            /* margin-left: 100px; */
-        
-        }
-
-        .game-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 150px;
-        }
-
-            .custom-card {
-            background: rgb(40, 38, 43);
-            border-radius: 10px; 
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-            color:rgb(255, 255, 255);
-            margin-bottom: 15px;
-        }
     </style>
-
-
-
 </head>
 <body class="bg-dark text-white">
 
@@ -95,22 +22,14 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-1"> </div>
-        <!-- Lewa strona -->
         <div class="col text-center">
-            
             <button class="btn btn-primary" type="button" id="menuToggle" style="margin-right: 100px;">
                 <i class="bi bi-list"></i>
             </button>
-            <!-- {% if user.is_authenticated %}
-                <button class="btn btn-info color-white" type="button" disabled>Welcome, {{ user.username }}!</button>
-            {% endif %} -->
         </div>
-
-        <!-- Prawa strona -->
         <div class="col text-center ">
             {% if user.is_authenticated %}
                 <a href="{% url 'logout_confirm' %}" class="btn btn-secondary">Log out</a>
-                <!-- Przycisk z ikoną osoby dla zalogowanych użytkowników -->
                 <a href="{% url 'profile' %}" class="btn btn-primary "><i class="fas fa-person"></i></a>
             {% else %}
                 <a href="{% url 'login' %}" class="btn btn-primary ">Log in</a>
@@ -136,6 +55,9 @@
             <a href="{% url 'contact' %}" class="btn btn-link d-flex align-items-center "  style="margin-top: 10px;">
                 <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
             </a>
+            <button id="theme-toggle" class="theme-toggle-btn ">
+                <i class="bi bi-brightness-alt-high"></i>
+            </button>
         </div>
     </div>
 
@@ -145,8 +67,7 @@
             {% csrf_token %}
 
             <div class="game-container">
-                <img src="{% static 'images/logo1.png' %}" alt="logo" class="img-fluid">
-
+                <img src="{% static 'kyrciapp/images/logo2.png' %}" alt="logo" class="img-fluid">
             </div>
 
             <div class="mb-3">
@@ -170,22 +91,11 @@
                         {{ message }}
                     </div>
                 {% endfor %}
-                <!-- Reszta twojego formularza -->
             </div>
         </form>
     </div>
 
-    <script>
-        document.getElementById('menuToggle').addEventListener('click', function() {
-            var menu = document.getElementById('navMenu');
-            if (menu.style.display === 'none') {
-                menu.style.display = 'block';
-            } else {
-                menu.style.display = 'none';
-            }
-        });
-    </script>
-
+    <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
 
 </body>
 </html>
