--- a/kyrciapgg/kyrciapp/templates/logout_confirm.html
+++ b/kyrciapgg/kyrciapp/templates/logout_confirm.html
@@ -1,9 +1,39 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Logout</title>
+    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+<style>
+    body.light-theme {
+    background-color: #f0f0f0; 
+    color: #333; 
+    }
+
+    body.light-theme .custom-card {
+    background: #ffffff; 
+    color: #000000; 
+    }
+    
+
+
+    .theme-toggle-btn {
+    border: 2px solid #ffffff66;
+    border-radius: 5px;
+    background-color: rgba(66, 63, 71, 0.9);
+    cursor: pointer;
+    margin-top: 15px;
+    display: inline-flex; 
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
+    .theme-toggle-btn i {
+    font-size: 24px; 
+}
+</style>
 </head>
 <body class="bg-dark text-white d-flex justify-content-center align-items-center" style="min-height: 100vh;">
 
@@ -22,6 +52,6 @@
             </div>
         </form>
     </div>
-
+    <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
 </body>
 </html>
