--- a/kyrciapgg/kyrciapp/templates/player_info.html
+++ b/kyrciapgg/kyrciapp/templates/player_info.html
@@ -8,205 +8,232 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Informacje o Graczu</title>
+    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+    <style>
+        .btn-custom {
+           height: 42px; 
+           white-space: nowrap;
+           margin-left: 8px;
+       }
+   
+       .small-profile-icon {
+           width: 25%;  
+           height: auto; 
+       }
+   
+       .small-tier-icon {
+           width: 65%;  
+           height: auto; 
+       }
+   
+       .tiny-champ-icon {
+           width: 10%;  
+           height: auto; 
+       }
+   
+       .custom-card {
+           background: rgb(40, 38, 43);
+           border-radius: 10px; 
+           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+           color:rgb(255, 255, 255);
+           margin-bottom: 15px;
+       }
+   
+       .separator-border {
+           border-bottom: 20px solid rgb(33, 36, 40); 
+           padding-top: 10px;
+           padding-bottom: 10px;
+   
+       }
+   
+       .left-padding {
+   
+           font: bold;
+           font-size: 20px;
+       }
+   
+       .game-container {
+       display: flex;
+       align-items: center;
+       gap: 10px;
+   }
+   
+   .game-result p {
+       margin: 0;
+       font-size: 16px;
+       font-weight: bold;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+   
+       padding-bottom: 30px;
+       padding-right: 35px;
+       padding-top: 30px;
+       
+   }
+   
+   .game-result p:nth-child(2) {
+       color: green; 
+   }
+   
+   
+   .champion-container {
+       position: relative;
+       align-items: center;
+      
+   }
+   
+   .champion-icon {
+       width: 70px;
+       height: 70px;
+   }
+   
+   .champion-level {
+       position: absolute;
+       bottom: 0;
+       left: 0;
+       background: rgba(0, 0, 0, 0.5); 
+       color: white;
+       padding: 2px;
+   }
+   
+   .summoner-spells img {
+       width: 35px;
+       height: 35px;
+       display: block; 
+       align-items: center;
+   }
+   
+   .win-background {
+       background-color: rgba(0, 128, 0, 0.15); 
+       border-radius: 10px; 
+   }
+   
+   .loss-background {
+       background-color: rgba(255, 0, 0, 0.15); 
+       border-radius: 10px; 
+   }
+   
+   .queue-name {
+       font-weight: bold; 
+       font-size: larger; 
+       text-align: center; 
+   }
+   
+   .center-text {
+       text-align: center; 
+   }
+   
+   .date-time-info {
+       margin-top: 20px; 
+   }
+   
+   .items-container {
+       display: flex;
+       flex-wrap: wrap;
+   }
+   
+   .item-row {
+       display: flex;
+       margin-bottom: 5px; 
+   }
+   
+   .item-row:last-child {
+       flex-grow: 1;
+   }
+   
+   .item-icon {
+       width: 35px; 
+       height: 35px; 
+       margin-right: 5px; 
+   }
+   
+   .last-item {
+       flex-grow: 1;
+       text-align: right;
+   }
+   
+   .champion-container2 {
+       display: flex; 
+       justify-content: center; 
+       gap: 10px;
+   }
+   
+   .champion-icon-container2 {
+       position: relative;
+       display: flex; 
+       justify-content: center; 
+       align-items: center; 
+   }
+   
+   .champion-level-on-icon2 {
+       position: absolute;
+       bottom: 5px;
+       right: 5px;
+       color: white;
+       font-weight: bold;
+       font-size: 12px;
+       line-height: 1;
+       background: rgba(0, 0, 0, 0.7);
+       border-radius: 50%;
+       padding: 2px;
+   }
+       #navMenu {
+           display: none;
+           width: 16%;
+           height: 100vh;
+           background-color: rgba(40, 38, 43, 0.9); 
+           color: white;
+           position: fixed;
+           top: 0px;
+           left: 0; 
+           z-index: 1000;
+           padding: 20px; 
+           border-radius: .40rem;
+           border-color: rgba(0, 0, 0, 0.9);
+           display: flex;
+           justify-content: center; 
+           }   
+   
+       .move-button {
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+          
+           }
+   
+       .margin-style{
+           margin-top: 20px;
+       }
+       body.light-theme {
+    background-color: #f0f0f0; 
+    color: #333; 
+    }
+
+    body.light-theme .custom-card {
+    background: #ffffff; 
+    color: #000000; 
+    }
+    
+
+
+    .theme-toggle-btn {
+    border: 2px solid #ffffff66;
+    border-radius: 5px;
+    background-color: rgba(66, 63, 71, 0.9);
+    cursor: pointer;
+    margin-top: 15px;
+    display: inline-flex; 
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
+    .theme-toggle-btn i {
+    font-size: 24px; 
+}
+   </style>
 </head>
 
-<style>
-     .btn-custom {
-        height: 42px; 
-        white-space: nowrap;
-        margin-left: 8px;
-    }
-
-    .small-profile-icon {
-        width: 25%;  
-        height: auto; 
-    }
-
-    .small-tier-icon {
-        width: 65%;  
-        height: auto; 
-    }
-
-    .tiny-champ-icon {
-        width: 10%;  
-        height: auto; 
-    }
-
-    .custom-card {
-        background: rgb(40, 38, 43);
-        border-radius: 10px; 
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-        color:rgb(255, 255, 255);
-        margin-bottom: 15px;
-    }
-
-    .separator-border {
-        border-bottom: 20px solid rgb(33, 36, 40); 
-        padding-top: 10px;
-        padding-bottom: 10px;
-
-    }
-
-    .left-padding {
-
-        font: bold;
-        font-size: 20px;
-    }
-
-    .game-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.game-result p {
-    margin: 0;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-bottom: 30px;
-    padding-right: 35px;
-    padding-top: 30px;
-    
-}
-
-.game-result p:nth-child(2) {
-    color: green; 
-}
-
-
-.champion-container {
-    position: relative;
-    align-items: center;
-   
-}
-
-.champion-icon {
-    width: 70px;
-    height: 70px;
-}
-
-.champion-level {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.5); 
-    color: white;
-    padding: 2px;
-}
-
-.summoner-spells img {
-    width: 35px;
-    height: 35px;
-    display: block; 
-    align-items: center;
-}
-
-.win-background {
-    background-color: rgba(0, 128, 0, 0.15); 
-    border-radius: 10px; 
-}
-
-.loss-background {
-    background-color: rgba(255, 0, 0, 0.15); 
-    border-radius: 10px; 
-}
-
-.queue-name {
-    font-weight: bold; 
-    font-size: larger; 
-    text-align: center; 
-}
-
-.center-text {
-    text-align: center; 
-}
-
-.date-time-info {
-    margin-top: 20px; 
-}
-
-.items-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.item-row {
-    display: flex;
-    margin-bottom: 5px; 
-}
-
-.item-row:last-child {
-    flex-grow: 1;
-}
-
-.item-icon {
-    width: 35px; 
-    height: 35px; 
-    margin-right: 5px; 
-}
-
-.last-item {
-    flex-grow: 1;
-    text-align: right;
-}
-
-.champion-container2 {
-    display: flex; 
-    justify-content: center; 
-    gap: 10px;
-}
-
-.champion-icon-container2 {
-    position: relative;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.champion-level-on-icon2 {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    color: white;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 1;
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 50%;
-    padding: 2px;
-}
-    #navMenu {
-        display: none;
-        width: 16%;
-        height: 100vh;
-        background-color: rgba(40, 38, 43, 0.9); 
-        color: white;
-        position: fixed;
-        top: 0px;
-        left: 0; 
-        z-index: 1000;
-        padding: 20px; 
-        border-radius: .40rem;
-        border-color: rgba(0, 0, 0, 0.9);
-        display: flex;
-        justify-content: center; 
-        }   
-
-    .move-button {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-       
-        }
-
-    .margin-style{
-        margin-top: 20px;
-    }
-</style>
 
 <body class="bg-dark text-white d-flex justify-content-center align-items-top" style="min-height: 100vh;">
 
@@ -267,6 +294,9 @@
                     <i class="bi bi-envelope-paper-fill me-2 fs-3"></i> <i class="margin-left2">Contact us</i>   
                 </a>
             </div>
+            <button id="theme-toggle" class="theme-toggle-btn ">
+                <i class="bi bi-brightness-alt-high"></i>
+            </button>
         </div>
     
 
@@ -284,7 +314,7 @@
                             <span>Level: {{ lvl }} </span>
                         </div>
         
-                        <!-- Formularz do aktualizacji -->
+                        <!-- Aktualizacja strony -->
                         <form method="post" class="mt-3">
                             {% csrf_token %}
                             <div class="text-center mt-2">
@@ -294,15 +324,13 @@
                             <input type="hidden" name="region" value="{{ request.session.global_region }}">
                         </form>                           
                         
-                        <!-- Nowe pole pod przyciskiem Submit -->
+                        <!-- Podsumowanie historii gier -->
                         <ul class="row list-unstyled separator-border">
                         </ul>
                         <div class="new-field mt-2 text-center" style="color: white;">
-                            <!-- Tutaj dodaj treść nowego pola -->
                             <span> {{ processed_looped_info.5 }}% WR </span>
                             <p></p>
                             <p></p>
-                            <!-- <span> {{ processed_looped_info.0 }} </span> -->
                             <span> {{ processed_looped_info.1 }} KDA </span>
                             
                             <p></p>
@@ -324,7 +352,7 @@
             </div>
         </div>
       <div class="col-sm-8">
-        <!-- Cell z MAESTRIĄ -->
+        <!-- Maestria -->
         <div class="card custom-card ">
             <div class="card-body">
                 <h5 class="card-title text-center">Highest Maestries</h5>
@@ -376,7 +404,7 @@
       </div>
     </div>
 
-
+    <!-- Informacje o rankingu -->
     <div class="row pt-3">
         <div class="col pb-3">
             <div class="card" style="color: white; background-color: rgb(40, 38, 43);">
@@ -384,18 +412,13 @@
                     <h2>Ranked Solo/Duo</h2>
                     {% if solo_rank_info %}
                     <div class="row">
-                        <!-- Lewa część dla obrazka -->
                         <div class="col-md-3 d-flex align-items-center justify-content-center">
                             <img src="https://raw.communitydragon.org/latest/plugins/rcp-fe-lol-shared-components/global/default/{{ solo_rank_info.Tier|lower }}.png" alt="Tier Icon" class="img-fluid small-tier-icon">
                         </div>
-        
-                        <!-- Środkowa część dla informacji o Tier i Rank -->
                         <div class="col-md-3 d-flex flex-column justify-content-center">
                             <div>{{ solo_rank_info.Tier }} {{ solo_rank_info.Rank }}</div>
                             <div>{{ solo_rank_info.League_Points }}LP</div>
                         </div>
-        
-                        <!-- Prawa kolumna dla pozostałych informacji -->
                         <div class="col-md-6 d-flex flex-column align-items-end">
                             <div>{{ solo_rank_info.Wins }}W</div>
                             <div>{{ solo_rank_info.Losses }}L</div>
@@ -406,7 +429,7 @@
                     {% else %}
                     <div>Unranked</div>
                     {% endif %}
-                    <hr> <!-- Linia rozdzielająca różne rangi -->
+                    <hr>
                 </div>
             </div>
         </div>
@@ -416,19 +439,14 @@
                     <h2>Ranked Flex 5v5</h2>
                     {% if flex_rank_info %}
                     <div class="row">
-                        <!-- Lewa część dla obrazka -->
                         <div class="col-md-3 d-flex align-items-center justify-content-center">
                             <img src="https://raw.communitydragon.org/latest/plugins/rcp-fe-lol-shared-components/global/default/{{ flex_rank_info.Tier|lower }}.png" alt="Tier Icon" class="img-fluid small-tier-icon">
                         </div>
-        
-                        <!-- Środkowa część dla informacji o Tier i Rank -->
                         <div class="col-md-3 d-flex flex-column justify-content-center">
                             <div>{{ flex_rank_info.Tier }} {{ flex_rank_info.Rank }}</div>
 
                             <div>{{ flex_rank_info.League_Points }}LP</div>
                         </div>
-        
-                        <!-- Prawa kolumna dla pozostałych informacji -->
                         <div class="col-md-6 d-flex flex-column align-items-end">
                             <div>{{ flex_rank_info.Wins }}W</div>
                             <div>{{ flex_rank_info.Losses }}L</div>
@@ -445,8 +463,8 @@
         </div>
     </div>
 
-<!-- Match history! -->
 
+<!-- Historia Gier -->
 <div class="col">
     {% for match in match_infos %}
         <div class="card custom-card ">
@@ -456,7 +474,7 @@
                         
                         <tr>
                             <td style="width: 15%;">
-                                <p class="queue-name">{{ match.queue_name }}</p> <!-- Stylizacja nazwy kolejki -->
+                                <p class="queue-name">{{ match.queue_name }}</p> 
                                 <p class="center-text">
                                     {% if match.when_form_today == 0 %}
                                         today
@@ -468,7 +486,7 @@
                                         {% endif %}
                                     {% endif %}
                                 </p>
-                                <div class="date-time-info center-text"> <!-- Stylizacja informacji o czasie -->
+                                <div class="date-time-info center-text">
                                     <p>Time: {{ match.game_duration }}</p>
                                     <p>{{ match.game_version }}</p>
                                     
@@ -496,13 +514,6 @@
 
                                         </div>
                                     </div>
-                                    <!-- <div class="game-result">
-                                        {% if game.win %}
-                                            <p>WIN</p>
-                                        {% else %}
-                                            <p>LOSS</p>
-                                        {% endif %}
-                                    </div> -->
                                     {% endif %}
                                 {% endfor %}
                             </td>
@@ -612,43 +623,6 @@
                                 {% endfor %}
                             </td>
 
-                                <!-- <td style="width: 20;" class="align-items-end">
-                                    
-                                    
-                                    {% for player in matches_with_teams %}
-                                        {% for player_2 in player.team_1 %}
-                                            {% if player.match_id == match.match_id %}
-                                                <p>{{ player_2 }}</p>
-                                            {% endif %}
-                                        {% endfor %}
-                                    {% endfor %}
-                                </td>
-
-                                <td style="width: 5%;">
-                                {% for player in matches_with_teams %}
-                                    {% for player_2 in player.team_2_champions %}
-                                        {% if player.match_id == match.match_id %}
-                                            
-                                            <p>
-                                            <img src="https://raw.communitydragon.org/latest/game/assets/characters/{{ player_2 }}/hud/{{ player_2 }}_circle_1.png" alt="{{ player_2 }}" class="img-fluid tiny-champ-icon" style="width: 25px; height: 25px;">
-                                            </p>
-                                        {% endif %}
-                                    {% endfor %}   
-                                {% endfor %}
-                                </td>
-
-
-                                <td style="width: 20%;" class="align-items-end">
-                                    
-                                    {% for player in matches_with_teams %}
-                                        {% for player_2 in player.team_2 %}
-                                            {% if player.match_id == match.match_id %}
-                                                <p>{{ player_2 }}</p>
-                                            {% endif %}
-                                        {% endfor %}   
-                                    {% endfor %}
-                                </td> -->
-                            
                         </tr>
                     </tbody>
                 </table>
@@ -657,25 +631,9 @@
     {% endfor %}
 </div>
 
-
-
 </div>
-<script>
-    document.getElementById('menuToggle').addEventListener('click', function() {
-        var menu = document.getElementById('navMenu');
-        if (menu.style.display === 'none') {
-            menu.style.display = 'block';
-        } else {
-            menu.style.display = 'none';
-        }
-    });
-    document.getElementById('closeMenuButton').addEventListener('click', function() {
-        var menu = document.getElementById('navMenu');
-        menu.style.display = 'none';
-    });
 
-</script>
-
+<script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
 
 </body>
 </html>
