--- a/kyrciapgg/kyrciapp/templates/contact.html
+++ b/kyrciapgg/kyrciapp/templates/contact.html
@@ -8,15 +8,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Wpisz nazwę gracza</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'kyrciapp/css/styles.css' %}">
 
 
     <style>
-        .login-button-container {
-            position: absolute;
-            right: 480px;
-            top: 10px;
-        }
+
 
         .color-dark {
             background-color: rgba(33,37,41,255)  !important;
@@ -57,23 +53,7 @@
             margin-top: 50px;
             }
 
-        #navMenu {
-            display: none;
-            width: 24%;
-            height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); 
-            color: white;
-            position: fixed;
-            top: 0px;
-            left: 0;
-            z-index: 1000;
-            padding: 20px; 
-            border-radius: .40rem;
-            border-color: rgba(0, 0, 0, 0.9);
-            display: flex;
-            justify-content: center;
-        
-        }
+
         .champion-container {
             position: relative;
             display: inline-block; 
@@ -117,38 +97,7 @@
             align-content: center;
             padding-left: 70px;
         }
-        .move-button {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        
-        }
-        body.light-theme {
-    background-color: #f0f0f0;
-    color: #333; 
-    }
 
-    body.light-theme .custom-card {
-    background: #dbdbdb;
-    color: #000000;
-    }
-    
-
-
-    .theme-toggle-btn {
-    border: 2px solid #ffffff66;
-    border-radius: 5px;
-    background-color: rgba(66, 63, 71, 0.9);
-    cursor: pointer;
-    margin-top: 15px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40%;
-}
-    .theme-toggle-btn i {
-    font-size: 24px;
-}
     </style>
 </head>
 <body class="bg-dark text-white">
@@ -242,8 +191,10 @@
         </div>  
     </div>
 
-    <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
-    
+    <script src="{% static 'kyrciapp/JavaScript/theme.js' %}"></script>
+    <script src="{% static 'kyrciapp/JavaScript/openMenu.js' %}"></script>
+    <script src="{% static 'kyrciapp/JavaScript/closeMenu.js' %}"></script>
+
 </script>
 </body>
 </html>
