--- a/kyrciapgg/kyrciapp/templates/login.html
+++ b/kyrciapgg/kyrciapp/templates/login.html
@@ -6,35 +6,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Login</title>
-    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
-<style>
-            body.light-theme {
-    background-color: #f0f0f0; 
-    color: #333; 
-    }
+    <link rel="stylesheet" href="{% static 'kyrciapp/css/styles.css' %}">
 
-    body.light-theme .custom-card {
-    background: #ffffff; 
-    color: #000000; 
-    }
-    
-
-
-    .theme-toggle-btn {
-    border: 2px solid #ffffff66;
-    border-radius: 5px;
-    background-color: rgba(66, 63, 71, 0.9);
-    cursor: pointer;
-    margin-top: 15px;
-    display: inline-flex; 
-    justify-content: center;
-    align-items: center;
-    margin-left: 40%;
-}
-    .theme-toggle-btn i {
-    font-size: 24px;
-}
-</style>
 </head>
 <body class="bg-dark text-white d-flex justify-content-center align-items-center" style="min-height: 100vh;">
 
@@ -90,45 +63,9 @@
     </div>
 
     
-    <!-- <script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script> -->
-
-    <script>
-        function setTheme(theme) {
-localStorage.setItem('theme', theme);
-}
-
-function applySavedTheme() {
-const theme = localStorage.getItem('theme');
-const themeToggleBtn = document.getElementById('theme-toggle');
-
-if (theme === 'light') {
-document.body.classList.remove('bg-dark');
-document.body.classList.add('light-theme');
-
-if (themeToggleBtn) themeToggleBtn.innerHTML = '<i class="bi bi-moon"></i>';
-} else {
-
-document.body.classList.add('bg-dark');
-document.body.classList.remove('light-theme');
-
-if (themeToggleBtn) themeToggleBtn.innerHTML = '<i class="bi bi-brightness-alt-high"></i>';
-}
-}
-
-document.addEventListener("DOMContentLoaded", applySavedTheme);
-
-document.getElementById('theme-toggle').addEventListener('click', function() {
-const isLightTheme = document.body.classList.contains('light-theme');
-
-if (isLightTheme) {
-    setTheme('dark'); 
-} else {
-    setTheme('light'); 
-}
-
-applySavedTheme(); 
-});
-    </script>
+    <script src="{% static 'kyrciapp/JavaScript/theme.js' %}"></script>
+    <script src="{% static 'kyrciapp/JavaScript/openMenu.js' %}"></script>
+    <script src="{% static 'kyrciapp/JavaScript/closeMenu.js' %}"></script>
 
 
 </body>
