--- a/kyrciapgg/kyrciapp/templates/player_info.html
+++ b/kyrciapgg/kyrciapp/templates/player_info.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Informacje o Graczu</title>
-    <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'kyrciapp/css/styles.css' %}">
     <style>
         .btn-custom {
            height: 42px; 
@@ -205,16 +205,6 @@
        .margin-style{
            margin-top: 20px;
        }
-       body.light-theme {
-    background-color: #f0f0f0; 
-    color: #333; 
-    }
-
-    body.light-theme .custom-card {
-    background: #ffffff; 
-    color: #000000; 
-    }
-    
 
 
     .theme-toggle-btn {
@@ -509,8 +499,8 @@
                                         </div>
                                         
                                         <div class="summoner-spells">
-                                            <img src="{% static 'images/' %}{{ game.summoner1Id }}.png" alt="{{ game.summoner1Id }}" class="img-fluid">
-                                            <img src="{% static 'images/' %}{{ game.summoner2Id }}.png" alt="{{ game.summoner2Id }}" class="img-fluid">
+                                            <img src="{% static '/kyrciapp/images/' %}{{ game.summoner1Id }}.png" alt="{{ game.summoner1Id }}" class="img-fluid">
+                                            <img src="{% static '/kyrciapp/images/' %}{{ game.summoner2Id }}.png" alt="{{ game.summoner2Id }}" class="img-fluid">
 
                                         </div>
                                     </div>
@@ -633,7 +623,10 @@
 
 </div>
 
-<script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/theme.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/openMenu.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/closeMenu.js' %}"></script>
+
 
 </body>
 </html>
