--- a/kyrciapgg/kyrciapp/templates/profile.html
+++ b/kyrciapgg/kyrciapp/templates/profile.html
@@ -9,31 +9,17 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <title>Wpisz nazwę gracza</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-        <!-- <link rel="stylesheet" href="{% static 'kyrciapp/static/css/styles.css' %}"> -->
+        <link rel="stylesheet" href="{% static 'kyrciapp/css/styles.css' %}">
     <title>Profile</title>
 
     <style>
 
-        .small-tier-icon {
+    .small-tier-icon {
         width: 5%;  
         height: auto; 
     }
-.custom-alert {
 
-    display: inline-block; 
-
-    color: #000000;
-    background-color: rgb(248, 215, 218);
-    border-color: #dc3545;
-    padding: .75rem 1.25rem;
-    border-radius: .25rem;
-}
-.color-white {
-
-    color: rgb(0, 0, 0) !important;
-}
-
-.custom-card {
+    .custom-card {
         background: rgb(40, 38, 43);
         border-radius: 10px; 
         border-color: rgba(0, 0, 0, 0.1);
@@ -61,56 +47,6 @@
         gap: 5px; 
     }
 
-    .no-wrap {
-        white-space: nowrap;
-    }
-    #navMenu {
-            display: none;
-            width: 24%;
-            height: 100vh;
-            background-color: rgba(40, 38, 43, 0.9); 
-            color: white;
-            position: fixed;
-            top: 0px;
-            left: 0; 
-            z-index: 1000;
-            padding: 20px; 
-            border-radius: .40rem;
-            border-color: rgba(0, 0, 0, 0.9);
-            display: flex;
-            justify-content: center; 
-        }
-        .move-button {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        body.light-theme {
-    background-color: #f0f0f0; 
-    color: #333;
-    }
-
-    body.light-theme .custom-card {
-    background: #ffffff; 
-    color: #000000;
-    }
-    
-
-
-    .theme-toggle-btn {
-    border: 2px solid #ffffff66;
-    border-radius: 5px;
-    background-color: rgba(66, 63, 71, 0.9);
-    cursor: pointer;
-    margin-top: 15px;
-    display: inline-flex; 
-    justify-content: center;
-    align-items: center;
-    margin-left: 40%;
-}
-    .theme-toggle-btn i {
-    font-size: 24px; 
-}
 </style>
 </head>
 <body class="bg-dark text-white">
@@ -233,7 +169,9 @@
         </ul>
     </div>
 </div>
-<script src="{% static 'kyrciapp/JavaScript/scripts.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/theme.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/openMenu.js' %}"></script>
+<script src="{% static 'kyrciapp/JavaScript/closeMenu.js' %}"></script>
 </body>
 </html>
 
